UI (ladder): fix unwanted wrap in intermediate screen size on deck stats screen

--- a/core/src/css/component/decktracker/main/decktracker-deck-details.component.scss
+++ b/core/src/css/component/decktracker/main/decktracker-deck-details.component.scss
@@ -21,6 +21,11 @@
 		}
 	}
 
+	.container {
+		display: flex;
+		width: 100%;
+	}
+
 	.deck-list-container {
 		order: 2;
 		margin-left: 20px;
